test/files/neg/symbol-literal-deprecation.scala
// scalac: -deprecation -Xfatal-warnings
//
abstract class Foo {
  val foo = 'TestSymbol
}
