test/files/neg/symbol-literal-deprecation.check
symbol-literal-deprecation.scala:4: warning: symbol literal is deprecated; use Symbol("TestSymbol") instead
  val foo = 'TestSymbol
            ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
